overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,11 +65,11 @@
     padding: 35px 15px 15px;
     margin: 0 auto;
     background-color: #ffffff;
-    height: calc(100vh - 145px);
+    //height: calc(100vh - 145px);
     margin-top: 90px;
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
-    box-shadow: -3px 3px 12px rgba(10, 46, 101, 0.03);
+    //box-shadow: -3px 3px 12px rgba(10, 46, 101, 0.03);
     z-index: 2;
     position: relative;
     &__new {
